9243
Variation:
{code:title=A.scala}

package test {
  object A {
    def apply(n: A) = n
  }
}
package object test {
  type A = Int
}
```scala
{code:title=repl}
scala> import test._
import test._

scala> A(0)
res0: test.A = 0

scala> A(0)
<console>:11: error: test.A.type does not take parameters
              A(0)
               ^
```
